bindings/java/src/main/java/tw/com/fugle/marketdata/generated/UniffiLib.java

    
    Pointer uniffi_marketdata_uniffi_fn_clone_futoptclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_futoptclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_futoptclient_historical(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_futoptclient_intraday(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_futopthistoricalclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_futopthistoricalclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_candles_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, Byte afterHours, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_daily_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, Byte afterHours, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_get_candles(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, Byte afterHours);
    Long uniffi_marketdata_uniffi_fn_method_futopthistoricalclient_get_daily(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, Byte afterHours);
    Pointer uniffi_marketdata_uniffi_fn_clone_futoptintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_futoptintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_candles_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue timeframe, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_candles(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue timeframe);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_products(Pointer ptr, RustBuffer.ByValue typ);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_quote(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_ticker(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_tickers(Pointer ptr, RustBuffer.ByValue typ);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_trades(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_futoptintradayclient_get_volumes(Pointer ptr, RustBuffer.ByValue symbol);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_products_sync(Pointer ptr, RustBuffer.ByValue typ, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_quote_sync(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_ticker_sync(Pointer ptr, RustBuffer.ByValue symbol, Byte afterHours, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_tickers_sync(Pointer ptr, RustBuffer.ByValue typ, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_trades_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_futoptintradayclient_volumes_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_restclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_restclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_restclient_futopt(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_restclient_stock(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stockclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stockclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_stockclient_corporate_actions(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_stockclient_historical(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_stockclient_intraday(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_stockclient_snapshot(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_method_stockclient_technical(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stockcorporateactionsclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stockcorporateactionsclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_capital_changes_sync(Pointer ptr, RustBuffer.ByValue date, RustBuffer.ByValue startDate, RustBuffer.ByValue endDate, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_dividends_sync(Pointer ptr, RustBuffer.ByValue date, RustBuffer.ByValue startDate, RustBuffer.ByValue endDate, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_capital_changes(Pointer ptr, RustBuffer.ByValue date, RustBuffer.ByValue startDate, RustBuffer.ByValue endDate);
    Long uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_dividends(Pointer ptr, RustBuffer.ByValue date, RustBuffer.ByValue startDate, RustBuffer.ByValue endDate);
    Long uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_listing_applicants(Pointer ptr, RustBuffer.ByValue date, RustBuffer.ByValue startDate, RustBuffer.ByValue endDate);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_listing_applicants_sync(Pointer ptr, RustBuffer.ByValue date, RustBuffer.ByValue startDate, RustBuffer.ByValue endDate, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stockhistoricalclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stockhistoricalclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_candles_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_get_candles(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe);
    Long uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_get_stats(Pointer ptr, RustBuffer.ByValue symbol);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_stats_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stockintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stockintradayclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_candles_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue timeframe, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_candles(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue timeframe);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_quote(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_ticker(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_tickers(Pointer ptr, RustBuffer.ByValue typ);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_trades(Pointer ptr, RustBuffer.ByValue symbol);
    Long uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_volumes(Pointer ptr, RustBuffer.ByValue symbol);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_quote_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_ticker_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_tickers_sync(Pointer ptr, RustBuffer.ByValue typ, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_trades_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stockintradayclient_volumes_sync(Pointer ptr, RustBuffer.ByValue symbol, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stocksnapshotclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stocksnapshotclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_actives_sync(Pointer ptr, RustBuffer.ByValue market, RustBuffer.ByValue trade, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_actives(Pointer ptr, RustBuffer.ByValue market, RustBuffer.ByValue trade);
    Long uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_movers(Pointer ptr, RustBuffer.ByValue market, RustBuffer.ByValue direction, RustBuffer.ByValue change);
    Long uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_quotes(Pointer ptr, RustBuffer.ByValue market, RustBuffer.ByValue typeFilter);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_movers_sync(Pointer ptr, RustBuffer.ByValue market, RustBuffer.ByValue direction, RustBuffer.ByValue change, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_quotes_sync(Pointer ptr, RustBuffer.ByValue market, RustBuffer.ByValue typeFilter, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_marketdata_uniffi_fn_clone_stocktechnicalclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_marketdata_uniffi_fn_free_stocktechnicalclient(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    RustBuffer.ByValue uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_bb_sync(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period, RustBuffer.ByValue stddev, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_bb(Pointer ptr, RustBuffer.ByValue symbol, RustBuffer.ByValue from, RustBuffer.ByValue to, RustBuffer.ByValue timeframe, RustBuffer.ByValue period, RustBuffer.ByValue stddev);
